--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.sc.lesa.mediashar">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/> -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -22,7 +23,8 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:launchMode="singleInstance"
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,7 +37,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme"/>
+            android:theme="@style/FullscreenTheme"
+            tools:ignore="Instantiatable" />
 
         <service android:name=".MediaReaderService" />
 
@@ -44,10 +47,12 @@
             android:name=".WatchContect"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_watch_contect"
-            android:theme="@style/FullscreenTheme" />
+            android:theme="@style/FullscreenTheme"
+            tools:ignore="Instantiatable" />
         <activity
             android:launchMode="singleInstance"
-            android:name=".SettingParam"/>
+            android:name=".SettingParam"
+            tools:ignore="Instantiatable" />
     </application>
 
 </manifest>
