--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 16 10:33:20 CST 2020
+#Mon Sep 18 11:04:04 CST 2023
 ndk.dir=C\:\\Users\\LESA\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\LESA\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Temp\\AppData\\Local\\Android\\Sdk
