--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -40,7 +46,10 @@
             android:theme="@style/FullscreenTheme"
             tools:ignore="Instantiatable" />
 
-        <service android:name=".MediaReaderService" />
+        <service android:name=".MediaReaderService"
+            android:foregroundServiceType="mediaProjection"
+            android:exported="true"
+            />
 
         <activity
             android:launchMode="singleInstance"
